# gls

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/: dependabot.yml
.github/actions/setup_gitleaks/: action.yml
.github/scripts/: update_formula
.github/workflows/: cicd.yml  clippy.yml  dependabot-auto-merge.yml  secrets-scan.yml  test-annotation.yml
HomebrewFormula/: gls.rb
dev/: generate-dev-config.sh  gitleaks-allowlist.toml  gitleaks.toml
src/: cli.rs  config.rs  diff.rs  filter.rs  gitleaks_config.rs  lib.rs  main.rs  report.rs  sarif.rs
src/cli/: apply.rs  cleanup_allowlist.rs  cleanup_rule.rs  diff.rs  extract_allowlist.rs  format.rs  review.rs  scan.rs
tests/: detect.rs  develop_config.rs  format.rs  secrets_scan.rs
tests/format/: cleanup_allowlist_expected.toml  cleanup_rule_expected.toml  extract_allowlist_expected.toml
tests/runner/: mod.rs
tests/setup/: mod.rs
tests/testdata/: allowlist.toml  config.toml
