[package]
name = "gitleaks-support"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1", features = ["backtrace"] }
chrono = { version = "0", features = ["serde"] }
clap = { version = "4", features = ["derive", "env"] }
rayon = "1"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tabled = "0"
toml = "0"
toml_edit = { version = "0" }
